--- a/src/css/shadow.less
+++ b/src/css/shadow.less
@@ -12,6 +12,8 @@
     align-items: center;
     justify-content: center;
 
+    pointer-events: none;
+
     .st-shadow--darken {
         background: rgba(1, 1, 1, 0.42);
     }
