Rewritten preset for map, added better styling for main page

--- a/src/css/shadow.less
+++ b/src/css/shadow.less
@@ -1,11 +1,10 @@
-
 .st-shadow {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
-    width: 100vw;
-    height: 100vh;
+    right: 0;
+    bottom: 0;
 
     background: none;
     display: flex;
