Finished The Table Design

--- a/src/css/shadow.less
+++ b/src/css/shadow.less
@@ -12,6 +12,7 @@
     justify-content: center;
 
     pointer-events: none;
+    z-index: 40;
 
     .st-shadow--darken {
         background: rgba(1, 1, 1, 0.42);
