Added the settings page

--- a/src/css/alert.less
+++ b/src/css/alert.less
@@ -7,7 +7,7 @@
 
     position: relative;
 
-    min-width: 300px;
+    width: 400px;
     min-height: 50px;
 
     display: flex;
@@ -16,7 +16,7 @@
     box-shadow: black 1px 1px 2px 1px;
 
     .st-alert__title {
-        padding: 0.2rem 0.5rem 0;
+        padding: 0.4rem 0.5rem;
     }
 
     .st-alert__body {
@@ -25,6 +25,7 @@
         overflow: auto;
         display: flex;
         align-items: center;
+        white-space: pre-line;
     }
 
     .st-alert__dismiss {
