--- a/src/css/dialog.less
+++ b/src/css/dialog.less
@@ -32,7 +32,7 @@
         margin: 1rem;
 
         display: flex;
-        justify-content: right;
+        justify-content: flex-end;
 
         & > button + button {
             margin-left: 0.5rem;
