--- a/src/css/shadow.less
+++ b/src/css/shadow.less
@@ -11,10 +11,13 @@
     align-items: center;
     justify-content: center;
 
-    pointer-events: none;
     z-index: 40;
 
-    .st-shadow--darken {
+    &.st-shadow--hidden {
+        pointer-events: none;
+    }
+
+    &.st-shadow--darken {
         background: rgba(1, 1, 1, 0.42);
     }
 }
