Timetable page mobile support

--- a/src/css/addons.less
+++ b/src/css/addons.less
@@ -55,3 +55,10 @@
 .st-spin {
     animation: st-spin__kf 2s infinite linear;
 }
+
+.st-list--full {
+    width: 100%;
+    & > .st-list__section {
+        width: 100%;
+    }
+}
