Completed mobile support

--- a/src/css/addons.less
+++ b/src/css/addons.less
@@ -62,3 +62,24 @@
         width: 100%;
     }
 }
+
+
+.st-section {
+    border: 1px solid var(--st-secondary);
+    margin: 1.25rem 0;
+    padding: 1.25rem 1rem 1rem;
+    position: relative;
+
+    .st-section__title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(1rem, -50%);
+        background: var(--st-background);
+        margin: 0;
+    }
+}
+
+.st-text--link {
+    word-break: break-all;
+}
