--- a/src/css/alert.less
+++ b/src/css/alert.less
@@ -7,7 +7,7 @@
 
     position: relative;
 
-    width: 400px;
+    width: ~"min(400px, 90vw)";
     min-height: 50px;
 
     display: flex;
@@ -22,7 +22,7 @@
     .st-alert__body {
         flex: 1 1;
         padding: 0.1rem 2rem 0.5rem 0.5rem;
-        overflow: auto;
+        overflow-y: auto;
         display: flex;
         align-items: center;
         white-space: pre-line;
