--- a/src/css/dialog.less
+++ b/src/css/dialog.less
@@ -1,6 +1,6 @@
 
 .st-dialog {
-    width: 60vw;
+    width: ~"max(60vw, 800px)";
     height: 80vh;
 
     color: var(--st-text);
@@ -37,5 +37,12 @@
         & > button + button {
             margin-left: 0.5rem;
         }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .st-dialog {
+        width: 100%;
+        height: 100%;
     }
 }
