--- a/src/css/addons.less
+++ b/src/css/addons.less
@@ -15,6 +15,7 @@
 
 .st-text--header {
     background: var(--st-primary);
+    color: var(--st-primary-text);
     padding: 0.75rem 1rem;
     font-size: 1.5rem;
 }
